# B-Emoji-Bot

./: README.md  pyproject.toml
sample/: sample_video.mkv
src/: main.py
src/bot/: __init__.py  bb.py  bot.py
